<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SGCombo Bluetooth Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="deviceAddressCaption">Device Address:</string>
	
    <string name="NewDeviceNameCaption">Type your custom device name : </string>
    <string name="OriginalNameCaption">Original device name : </string>
	 <string name="no_paired_device" >If no devices are listed please pair your device</string>
	   <string name="selected_title">selected</string>
	     <string name="user_title">user conversation title</string>  
	     <string name="paired_devices_title">Paired devices</string>
	      <string name="select_devices_title">Please select device</string>
	      <string name="discovarable_title">Discoverable mode</string>
	      <string name="about_box_title">Bluetooth Manager</string>
	      <string name="select_new_device">Please select new device</string>
  <string name="scanning">scanning for devices...</string>
   <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
	           <string name="title_paired_devices1">Paired Devices</string>
    <string name="title_other_devices1">Available Devices</string>
       <string name="button_scan">Scan for devices</string>
       
       
           <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>
    
    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>
    
    <string name="text_view_paired">Paired Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>
    
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    
    <string name="text_pair">Pair</string>
    
    <string name="pref_device_name">My device nickname</string>
    <string name="pref_device_info_title">Device Information</string>
    <string name="pref_discoverable_time_title">Discoverable Time</string>
</resources>
